--- a/_includes/sc/intro.html
+++ b/_includes/sc/intro.html
@@ -1,11 +1,10 @@
 <p>
+  Computational skills are an integral part of today's researchers in need to analyse large amount of data. You might be aware that many wet-lab biologists are currently spending part of their time on the computer. Many scientists struggle with this aspect of research as they have not been trained in the necessary set of skills. The result is that too much time is spent figuring out the process. This workshop provides training in several key tools, with a focus on good development practices that encourage efficient and reproducible research computing.
+  
   <a href="{{site.swc_site}}">Software Carpentry</a>
   aims to help researchers get their work done
   in less time and with less pain
   by teaching them basic research computing skills.
-  This hands-on workshop will cover basic concepts and tools,
-  including program design, version control, data management,
-  and task automation.
   Participants will be encouraged to help one another
   and to apply what they have learned to their own research problems.
 </p>
