--- a/_includes/sc/intro.html
+++ b/_includes/sc/intro.html
@@ -1,7 +1,21 @@
 <p>
-  Computational skills are an integral part of today's researchers in need to analyse large amount of data. You might be aware that many wet-lab biologists are currently spending part of their time on the computer. Many scientists struggle with this aspect of research as they have not been trained in the necessary set of skills. The result is that too much time is spent figuring out the process. This workshop provides training in several key tools, with a focus on good development practices that encourage efficient and reproducible research computing.
-  
-  <a href="{{site.swc_site}}">Software Carpentry</a>
+  Computational skills are an integral part of today's researchers in need to analyse large amount of data. 
+  You might be aware that many wet-lab biologists are currently spending part of their time on the computer. 
+  Many scientists struggle with this aspect of research as they have not been trained in the necessary set
+  of skills. The result is that too much time is spent figuring out the process.
+</p>
+<p>
+  This workshop is organised by <a href="https://www.elixir-europe.org/" taget="_blank">ELIXIR</a>, 
+  <a href="https://www.elixir-belgium.org/" target="_blank">ELIXIR-BE</a> and provides 
+  training in several key tools, with a focus on good development practices that encourage efficient and 
+  reproducible research computing.
+ </p>
+<p>
+  The paper <a href="http://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005871" target="_blank">
+  "Ten simple rules for biologists learning to program"</a> has very good recommendations.  
+</p>
+<p>  
+  The materials and methosology are from <a href="{{site.swc_site}}">Software Carpentry</a> which 
   aims to help researchers get their work done
   in less time and with less pain
   by teaching them basic research computing skills.
@@ -12,6 +26,7 @@
   <em>
     For more information on what we teach and why,
     please see our paper
-    "<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".
+    "<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745">Best Practices for Scientific 
+    Computing</a>".
   </em>
 </p>
