--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -14,14 +14,18 @@
   <div class="col-md-6">
     <h3 id="syllabus-python">Programming in Python</h3>
     <ul>
+      <li>Jupyter Notebook</li>
+      <li>Variables and Assignment</li>
+      <li>Data Types and Type Conversion</li>
+      <li>Built-in Functions and Help</li>
       <li>Using libraries</li>
-      <li>Working with arrays</li>
-      <li>Reading and plotting data</li>
-      <li>Creating and using functions</li>
-      <li>Loops and conditionals</li>
-      <li>Defensive programming</li>
-      <li>Using Python from the command line</li>
-      <li><a href="{{site.swc_pages}}/python-novice-inflammation/reference">Reference...</a></li>
+      <li>Reading Tabular Data into DataFrames</li>
+      <li>Pandas DataFrames</li>
+      <li>Plotting</li>
+      <li>Lists and Loops</li>
+      <li>Functions</li>
+      <li>Programming Style</li>
+      <li><a href="{{site.swc_pages}}/python-novice-gapminder/reference">Reference...</a></li>
     </ul>
   </div>
   <!--
